Added comment in section 3 for outlier removal

--- a/Credit_Card_Fraud_Detection.ipynb
+++ b/Credit_Card_Fraud_Detection.ipynb
@@ -1974,7 +1974,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "V17_non_fraud = normalized_df.query('V17 > -7 & Class == 0')\n",
+    "V17_non_fraud = normalized_df.query('V17 > -7 & Class == 0') # Purpose is to remove the outliers\n",
     "V17_fraud = normalized_df.query('Class == 1')\n",
     "normalized_df_no_outlier = pd.concat([V17_non_fraud,V17_fraud])"
    ]
